# mimi

./: .env.example  .gitignore  Cargo.toml  README.md  build_history_inplace.sh
idl/: txoracle.json
src/: api.rs  divergence.rs  feed.rs  lib.rs  main.rs  mapping.rs  pricing.rs  venue.rs  wallet.rs
tests/: live_capture.rs
web/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
web/src/: App.jsx  styles.css
