[package]
name = "mimi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
bs58 = "0.5"
axum = "0.8"

