[package]
name = "mimi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
bs58 = "0.5"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }